lab4_Skorobohatyi/SkorobohatyiLab4.cydsn/REBUILD.log
--------------- Rebuild Started: 05/04/2026 21:10:14 Project: main.c, Configuration: ARM GCC 5.4-2016-q2-update Debug ---------------
arm-none-eabi-gcc.exe -mcpu=cortex-m0 -mthumb -I. -IGenerated_Source\PSoC4 -Wa,-alh=.\CortexM0\ARM_GCC_541\Debug/main.lst -g -D DEBUG -D CY_CORE_ID=0 -Wall -ffunction-sections -ffat-lto-objects -Og -c main.c -o .\CortexM0\ARM_GCC_541\Debug\main.o
main.c:22:16: error: redefinition of 'LED_NUM'
 static uint8_t LED_NUM[] = {
                ^
main.c:3:16: note: previous definition of 'LED_NUM' was here
 static uint8_t LED_NUM[] = {
                ^
main.c:3:16: warning: 'LED_NUM' defined but not used [-Wunused-variable]
The command 'arm-none-eabi-gcc.exe' failed with exit code '1'.
--------------- Rebuild Failed: 05/04/2026 21:10:14 ---------------
